--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,10 @@
   "env": {
     "node": true,
     "jest": true,
-    "es6": true
+    "es6": true,
+    "browser": true
+  },
+  "globals": {
+    "GhTalk": true
   }
 }
